--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -87,6 +87,10 @@
     <Compile Include="Pages_MVs\ProvisioningPages\Species\MySpeciesProvisioningPage.xaml.cs">
       <DependentUpon>MySpeciesProvisioningPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages_MVs\ProvisioningPages\Species\MySpeciestProvisioningViewModel.cs" />
+    <Compile Include="Pages_MVs\ProvisioningPages\TackleBox\FishingLureDetail.xaml.cs">
+      <DependentUpon>FishingLureDetail.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages_MVs\ProvisioningPages\TackleBox\TackleBoxPage.xaml.cs">
       <DependentUpon>TackleBoxPage.xaml</DependentUpon>
     </Compile>
@@ -280,6 +284,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages_MVs\ProvisioningPages\MyFish\MyFishDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages_MVs\ProvisioningPages\TackleBox\FishingLureDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
