--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Model\AppSetting.cs" />
     <Compile Include="Model\ViewModel\FishOnGroupBySpeciesViewModel.cs" />
     <Compile Include="Model\ViewModel\FishOnGroupByWayPointViewModel.cs" />
+    <Compile Include="Model\ViewModel\CaugtFish.cs" />
     <Compile Include="Pages_MVs\AccordionViewModel\AccordionNodeViewModel.cs" />
     <Compile Include="Pages_MVs\LakeMap\LakeMapDetailPage.xaml.cs">
       <DependentUpon>LakeMapDetailPage.xaml</DependentUpon>
@@ -95,9 +96,14 @@
     </Compile>
     <Compile Include="Pages_MVs\ProvisioningPages\TackleBox\TackleBoxModelView.cs" />
     <Compile Include="Pages_MVs\StyleSheet.cs" />
+    <Compile Include="Pages_MVs\WaypointNameMethodRecorder\VoiceToTextPage.xaml.cs">
+      <DependentUpon>VoiceToTextPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages_MVs\WaypointNameMethodRecorder\WaypointNameMethodRecorderViewModel.cs" />
     <Compile Include="PlatformInterfaces\IFileHelper.cs" />
     <Compile Include="PlatformInterfaces\IFishOnCurrentLocationService.cs" />
     <Compile Include="PlatformInterfaces\ISQLite.cs" />
+    <Compile Include="PlatformInterfaces\SpeechToText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages_MVs\ProvisioningPages\WayPoints\WPDetailPage.xaml.cs">
       <DependentUpon>WPDetailPage.xaml</DependentUpon>
@@ -111,6 +117,7 @@
     <Compile Include="Repositories\FishOnHttpRepository.cs" />
     <Compile Include="Repositories\FishOnDataContext.cs" />
     <Compile Include="Repositories\LakeRepository.cs" />
+    <Compile Include="Repositories\SessionDataService.cs" />
     <Compile Include="Repositories\SpeciesRepository.cs" />
     <Compile Include="Repositories\TestDataSeeder.cs" />
     <Compile Include="Repositories\WayPointRepository.cs" />
@@ -136,6 +143,7 @@
     <Compile Include="Pages_MVs\SimpleInputModal\SimpleInputModalModelView.cs" />
     <Compile Include="Pages_MVs\Species\SpeciesPageModelView.cs" />
     <Compile Include="Pages_MVs\ProvisioningPages\WayPoints\WayPointProvisioningModelView.cs" />
+    <Compile Include="Utils\FieldSetGenerator.cs" />
     <Compile Include="Utils\ImgButtonGenerator.cs" />
     <Compile Include="Utils\ListViewAlternatingRowProcessor.cs" />
   </ItemGroup>
@@ -286,6 +294,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages_MVs\ProvisioningPages\Settings\SettingsListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages_MVs\WaypointNameMethodRecorder\VoiceToTextPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
