--- a/Src/FishOnMobileApp/FishOnMobileApp.Droid/Properties/AndroidManifest.xml
+++ b/Src/FishOnMobileApp/FishOnMobileApp.Droid/Properties/AndroidManifest.xml
@@ -8,6 +8,9 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="FishOnMobile" android:icon="@drawable/fish_on_logo">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA0ITETDDGmeW49bWrNaw9Y_p8DGDVk9Uc" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
