--- a/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/packages.config
@@ -40,6 +40,7 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="wpa81" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="wpa81" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="wpa81" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="wpa81" />
   <package id="Xamarin.Forms.Maps" version="2.3.3.175" targetFramework="wpa81" />
 </packages>
