--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Pages_MVs\Species\SpeciesPageModelView.cs" />
     <Compile Include="Pages_MVs\ProvisioningPages\WayPoints\WayPointProvisioningModelView.cs" />
     <Compile Include="Utils\FieldSetGenerator.cs" />
+    <Compile Include="Utils\FishOnCamera.cs" />
     <Compile Include="Utils\ImgButtonGenerator.cs" />
     <Compile Include="Utils\ListViewAlternatingRowProcessor.cs" />
   </ItemGroup>
@@ -160,6 +161,14 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Plugin.Media, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.Plugin.Media.2.6.2\lib\portable-net45+wp80+win8+wpa81\Plugin.Media.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Plugin.Media.Abstractions, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.Plugin.Media.2.6.2\lib\portable-net45+wp80+win8+wpa81\Plugin.Media.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
