--- a/Src/FishOnMobileApp/FishOnMobileApp/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp/packages.config
@@ -7,6 +7,7 @@
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms.Maps" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
