--- a/Src/UnitTests/packages.config
+++ b/Src/UnitTests/packages.config
@@ -6,5 +6,6 @@
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net45" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="net45" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="net45" />
   <package id="Xamarin.UITest" version="1.3.8" targetFramework="net45" />
 </packages>
